# rust-rest-api-exploration

./: Cargo.toml  Dockerfile  Makefile
.github/workflow/: rust-code-style.yaml  rust-format.yaml  rust-lint.yaml
.github/workflows/: clean-up-caches.yaml  rust-code-style.yaml  rust-hydrate-build-cache.yaml
src/: docs.rs  errors.rs  extractors.rs  main.rs
src/services/: mod.rs
src/services/hello/: mod.rs
src/static/swagger-ui/: README.md
static/swagger-ui/: swagger-initializer.js
