[package]
name = "rust-rest-api-exploration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.10.0", features = ["axum", "axum-extra", "serde_qs", "redoc", "macros", "axum-extra-query", "axum-headers", "axum-extra-form"] }
async-trait = "0.1.68"
axum = { version = "0.6.12", features = ["macros"] }
axum-extra = "0.4.0"
axum-jsonschema = { version = "0.5.0", features = ["aide"] }
chrono = { version = "0.4.24", features = ["serde"] }
schemars = { version = "0.8.12", features = ["uuid1", "chrono"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_qs = { version = "0.12.0", features = ["axum"] }
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace", "cors", "compression-full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
